# SW2

./: CMakeLists.txt  README.md  calc.c  compare.c  coords.c  core.c  energy.c  ensight.c  ensight.h  finish.c  init.c  io.c  laplacian.c  perturbs.c  schemes.c  sw.h  tools.c
.github/workflows/: sw2_ci.yml
casegen/: CMakeLists.txt  Casegen.c
demopetita/: CMakeLists.txt  Demopetita.c
examples/JupiterEnergyTest/: JupiterEGM.planet  Perfil_OPAL_Ricardo.wind  enou.txt  jupiters.sw  nowind.wind
examples/SaturnSmoothInjection/: SaturnEGM2.planet  Saturn_Cassini.wind  minicanal.sw  nowind.wind
main/: CMakeLists.txt  Main.c
postproc/: CMakeLists.txt  Postproc.c
scripts/: genpng  geostrophic_equilibrium_perturbation.py  sw_clean_ensight
sppde/: CMakeLists.txt  sppde.h  sppde_alloc_gather.c  sppde_binary_files.c  sppde_core.c  sppde_cr.c  sppde_gs_field.c  sppde_hupdate.c  sppde_internals.h  sppde_parser.c  sppde_parser.h  sppde_tests.h  sppde_tinyexpr.c  test_core.c  test_sweeps2_2d.c  test_sweeps_2d.c
